--- a/hw-01.ipynb
+++ b/hw-01.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "# Homework 1: Python, NumPy, and Pandas\n",
+    "## Author: Amy Esplain\n",
+    "\n",
     "\n",
     "**Instructions:**\n",
     "- Complete all the questions below.\n",
@@ -367,8 +369,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
